parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On PROGRAM shift to state 1
-- On program shift to state 144
## Reductions:

State 1:
## Known stack suffix:
## PROGRAM
## LR(1) items:
program -> PROGRAM . PSTRING opt_variable_declaration_list opt_subprogram_list statement_part EOF [ # ]
## Transitions:
-- On PSTRING shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## PROGRAM PSTRING
## LR(1) items:
program -> PROGRAM PSTRING . opt_variable_declaration_list opt_subprogram_list statement_part EOF [ # ]
## Transitions:
-- On VAR shift to state 3
-- On opt_variable_declaration_list shift to state 20
## Reductions:
-- On PROCEDURE FUNCTION BEGIN
--   reduce production opt_variable_declaration_list ->

State 3:
## Known stack suffix:
## VAR
## LR(1) items:
opt_variable_declaration_list -> VAR . variable_declaration_list [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On IDE shift to state 4
-- On variable_field shift to state 5
-- On variable_declaration_list shift to state 19
-- On separated_nonempty_list(COMMA,ide) shift to state 7
-- On ide shift to state 16
## Reductions:

State 4:
## Known stack suffix:
## IDE
## LR(1) items:
ide -> IDE . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LS LP LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA COLON ASSIGN AND ]
## Transitions:
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LS LP LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA COLON ASSIGN AND
--   reduce production ide -> IDE

State 5:
## Known stack suffix:
## variable_field
## LR(1) items:
variable_declaration_list -> variable_field . [ PROCEDURE FUNCTION BEGIN ]
variable_declaration_list -> variable_field . variable_declaration_list [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On IDE shift to state 4
-- On variable_field shift to state 5
-- On variable_declaration_list shift to state 6
-- On separated_nonempty_list(COMMA,ide) shift to state 7
-- On ide shift to state 16
## Reductions:
-- On PROCEDURE FUNCTION BEGIN
--   reduce production variable_declaration_list -> variable_field

State 6:
## Known stack suffix:
## variable_field variable_declaration_list
## LR(1) items:
variable_declaration_list -> variable_field variable_declaration_list . [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
## Reductions:
-- On PROCEDURE FUNCTION BEGIN
--   reduce production variable_declaration_list -> variable_field variable_declaration_list

State 7:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide)
## LR(1) items:
variable_field -> separated_nonempty_list(COMMA,ide) . COLON ptype SEMICOLON [ PROCEDURE IDE FUNCTION BEGIN ]
## Transitions:
-- On COLON shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide) COLON
## LR(1) items:
variable_field -> separated_nonempty_list(COMMA,ide) COLON . ptype SEMICOLON [ PROCEDURE IDE FUNCTION BEGIN ]
## Transitions:
-- On TSTRING shift to state 9
-- On TINT shift to state 10
-- On TCHAR shift to state 11
-- On TBOOLEAN shift to state 12
-- On stype shift to state 13
-- On ptype shift to state 14
## Reductions:

State 9:
## Known stack suffix:
## TSTRING
## LR(1) items:
stype -> TSTRING . [ SEMICOLON RP COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RP COMMA
--   reduce production stype -> TSTRING

State 10:
## Known stack suffix:
## TINT
## LR(1) items:
stype -> TINT . [ SEMICOLON RP COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RP COMMA
--   reduce production stype -> TINT

State 11:
## Known stack suffix:
## TCHAR
## LR(1) items:
stype -> TCHAR . [ SEMICOLON RP COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RP COMMA
--   reduce production stype -> TCHAR

State 12:
## Known stack suffix:
## TBOOLEAN
## LR(1) items:
stype -> TBOOLEAN . [ SEMICOLON RP COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RP COMMA
--   reduce production stype -> TBOOLEAN

State 13:
## Known stack suffix:
## stype
## LR(1) items:
ptype -> stype . [ SEMICOLON RP COMMA ]
## Transitions:
## Reductions:
-- On SEMICOLON RP COMMA
--   reduce production ptype -> stype

State 14:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide) COLON ptype
## LR(1) items:
variable_field -> separated_nonempty_list(COMMA,ide) COLON ptype . SEMICOLON [ PROCEDURE IDE FUNCTION BEGIN ]
## Transitions:
-- On SEMICOLON shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide) COLON ptype SEMICOLON
## LR(1) items:
variable_field -> separated_nonempty_list(COMMA,ide) COLON ptype SEMICOLON . [ PROCEDURE IDE FUNCTION BEGIN ]
## Transitions:
## Reductions:
-- On PROCEDURE IDE FUNCTION BEGIN
--   reduce production variable_field -> separated_nonempty_list(COMMA,ide) COLON ptype SEMICOLON

State 16:
## Known stack suffix:
## ide
## LR(1) items:
separated_nonempty_list(COMMA,ide) -> ide . [ COLON ]
separated_nonempty_list(COMMA,ide) -> ide . COMMA separated_nonempty_list(COMMA,ide) [ COLON ]
## Transitions:
-- On COMMA shift to state 17
## Reductions:
-- On COLON
--   reduce production separated_nonempty_list(COMMA,ide) -> ide

State 17:
## Known stack suffix:
## ide COMMA
## LR(1) items:
separated_nonempty_list(COMMA,ide) -> ide COMMA . separated_nonempty_list(COMMA,ide) [ COLON ]
## Transitions:
-- On IDE shift to state 4
-- On separated_nonempty_list(COMMA,ide) shift to state 18
-- On ide shift to state 16
## Reductions:

State 18:
## Known stack suffix:
## ide COMMA separated_nonempty_list(COMMA,ide)
## LR(1) items:
separated_nonempty_list(COMMA,ide) -> ide COMMA separated_nonempty_list(COMMA,ide) . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production separated_nonempty_list(COMMA,ide) -> ide COMMA separated_nonempty_list(COMMA,ide)

State 19:
## Known stack suffix:
## VAR variable_declaration_list
## LR(1) items:
opt_variable_declaration_list -> VAR variable_declaration_list . [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
## Reductions:
-- On PROCEDURE FUNCTION BEGIN
--   reduce production opt_variable_declaration_list -> VAR variable_declaration_list

State 20:
## Known stack suffix:
## PROGRAM PSTRING opt_variable_declaration_list
## LR(1) items:
program -> PROGRAM PSTRING opt_variable_declaration_list . opt_subprogram_list statement_part EOF [ # ]
## Transitions:
-- On PROCEDURE shift to state 21
-- On FUNCTION shift to state 128
-- On subprogram_list shift to state 138
-- On subprogram shift to state 139
-- On opt_subprogram_list shift to state 141
## Reductions:
-- On BEGIN
--   reduce production opt_subprogram_list ->

State 21:
## Known stack suffix:
## PROCEDURE
## LR(1) items:
subprogram -> PROCEDURE . ide LP loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON opt_variable_declaration_list statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On IDE shift to state 4
-- On ide shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## PROCEDURE ide
## LR(1) items:
subprogram -> PROCEDURE ide . LP loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON opt_variable_declaration_list statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On LP shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## PROCEDURE ide LP
## LR(1) items:
subprogram -> PROCEDURE ide LP . loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON opt_variable_declaration_list statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On IDE shift to state 4
-- On separated_nonempty_list(COMMA,parameter) shift to state 24
-- On separated_nonempty_list(COMMA,ide) shift to state 25
-- On parameter shift to state 28
-- On loption(separated_nonempty_list(COMMA,parameter)) shift to state 31
-- On ide shift to state 16
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,parameter)) ->

State 24:
## Known stack suffix:
## separated_nonempty_list(COMMA,parameter)
## LR(1) items:
loption(separated_nonempty_list(COMMA,parameter)) -> separated_nonempty_list(COMMA,parameter) . [ RP ]
## Transitions:
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,parameter)) -> separated_nonempty_list(COMMA,parameter)

State 25:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide)
## LR(1) items:
parameter -> separated_nonempty_list(COMMA,ide) . COLON ptype [ RP COMMA ]
## Transitions:
-- On COLON shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide) COLON
## LR(1) items:
parameter -> separated_nonempty_list(COMMA,ide) COLON . ptype [ RP COMMA ]
## Transitions:
-- On TSTRING shift to state 9
-- On TINT shift to state 10
-- On TCHAR shift to state 11
-- On TBOOLEAN shift to state 12
-- On stype shift to state 13
-- On ptype shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## separated_nonempty_list(COMMA,ide) COLON ptype
## LR(1) items:
parameter -> separated_nonempty_list(COMMA,ide) COLON ptype . [ RP COMMA ]
## Transitions:
## Reductions:
-- On RP COMMA
--   reduce production parameter -> separated_nonempty_list(COMMA,ide) COLON ptype

State 28:
## Known stack suffix:
## parameter
## LR(1) items:
separated_nonempty_list(COMMA,parameter) -> parameter . [ RP ]
separated_nonempty_list(COMMA,parameter) -> parameter . COMMA separated_nonempty_list(COMMA,parameter) [ RP ]
## Transitions:
-- On COMMA shift to state 29
## Reductions:
-- On RP
--   reduce production separated_nonempty_list(COMMA,parameter) -> parameter

State 29:
## Known stack suffix:
## parameter COMMA
## LR(1) items:
separated_nonempty_list(COMMA,parameter) -> parameter COMMA . separated_nonempty_list(COMMA,parameter) [ RP ]
## Transitions:
-- On IDE shift to state 4
-- On separated_nonempty_list(COMMA,parameter) shift to state 30
-- On separated_nonempty_list(COMMA,ide) shift to state 25
-- On parameter shift to state 28
-- On ide shift to state 16
## Reductions:

State 30:
## Known stack suffix:
## parameter COMMA separated_nonempty_list(COMMA,parameter)
## LR(1) items:
separated_nonempty_list(COMMA,parameter) -> parameter COMMA separated_nonempty_list(COMMA,parameter) . [ RP ]
## Transitions:
## Reductions:
-- On RP
--   reduce production separated_nonempty_list(COMMA,parameter) -> parameter COMMA separated_nonempty_list(COMMA,parameter)

State 31:
## Known stack suffix:
## PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter))
## LR(1) items:
subprogram -> PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) . RP SEMICOLON opt_variable_declaration_list statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On RP shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) RP
## LR(1) items:
subprogram -> PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) RP . SEMICOLON opt_variable_declaration_list statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On SEMICOLON shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON
## LR(1) items:
subprogram -> PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON . opt_variable_declaration_list statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On VAR shift to state 3
-- On opt_variable_declaration_list shift to state 34
## Reductions:
-- On BEGIN
--   reduce production opt_variable_declaration_list ->

State 34:
## Known stack suffix:
## PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON opt_variable_declaration_list
## LR(1) items:
subprogram -> PROCEDURE ide LP loption(separated_nonempty_list(COMMA,parameter)) RP SEMICOLON opt_variable_declaration_list . statement_part [ PROCEDURE FUNCTION BEGIN ]
## Transitions:
-- On BEGIN shift to state 35
-- On statement_part shift to state 127
## Reductions:

State 35:
## Known stack suffix:
## BEGIN
## LR(1) items:
statement_part -> BEGIN . statement_list END DOT [ PROCEDURE FUNCTION EOF BEGIN ]
## Transitions:
-- On WRITE shift to state 36
-- On WHILE shift to state 80
-- On READ shift to state 83
-- On IF shift to state 92
-- On IDE shift to state 4
-- On FOR shift to state 97
-- On BEGIN shift to state 104
-- On variable shift to state 105
-- On statement_list shift to state 124
-- On statement shift to state 112
-- On ide shift to state 114
## Reductions:

State 36:
## Known stack suffix:
## WRITE
## LR(1) items:
statement -> WRITE . LP loption(separated_nonempty_list(COMMA,exp)) RP SEMICOLON [ WRITE WHILE READ IF IDE FOR END ELSE BEGIN ]
## Transitions:
-- On LP shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## WRITE LP
## LR(1) items:
statement -> WRITE LP . loption(separated_nonempty_list(COMMA,exp)) RP SEMICOLON [ WRITE WHILE READ IF IDE FOR END ELSE BEGIN ]
## Transitions:
-- On TRUE shift to state 38
-- On PSTRING shift to state 39
-- On NOT shift to state 40
-- On LP shift to state 41
-- On INT shift to state 42
-- On IDE shift to state 4
-- On FALSE shift to state 43
-- On separated_nonempty_list(COMMA,exp) shift to state 46
-- On loption(separated_nonempty_list(COMMA,exp)) shift to state 77
-- On ide shift to state 44
-- On exp shift to state 49
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,exp)) ->

State 38:
## Known stack suffix:
## TRUE
## LR(1) items:
exp -> TRUE . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND
--   reduce production exp -> TRUE

State 39:
## Known stack suffix:
## PSTRING
## LR(1) items:
exp -> PSTRING . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND
--   reduce production exp -> PSTRING

State 40:
## Known stack suffix:
## NOT
## LR(1) items:
exp -> NOT . exp [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
-- On TRUE shift to state 38
-- On PSTRING shift to state 39
-- On NOT shift to state 40
-- On LP shift to state 41
-- On INT shift to state 42
-- On IDE shift to state 4
-- On FALSE shift to state 43
-- On ide shift to state 44
-- On exp shift to state 76
## Reductions:

State 41:
## Known stack suffix:
## LP
## LR(1) items:
exp -> LP . exp RP [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
-- On TRUE shift to state 38
-- On PSTRING shift to state 39
-- On NOT shift to state 40
-- On LP shift to state 41
-- On INT shift to state 42
-- On IDE shift to state 4
-- On FALSE shift to state 43
-- On ide shift to state 44
-- On exp shift to state 74
## Reductions:

State 42:
## Known stack suffix:
## INT
## LR(1) items:
exp -> INT . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND
--   reduce production exp -> INT

State 43:
## Known stack suffix:
## FALSE
## LR(1) items:
exp -> FALSE . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND
--   reduce production exp -> FALSE

State 44:
## Known stack suffix:
## ide
## LR(1) items:
exp -> ide . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
exp -> ide . LP loption(separated_nonempty_list(COMMA,exp)) RP [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
-- On LP shift to state 45
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND
--   reduce production exp -> ide

State 45:
## Known stack suffix:
## ide LP
## LR(1) items:
exp -> ide LP . loption(separated_nonempty_list(COMMA,exp)) RP [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
-- On TRUE shift to state 38
-- On PSTRING shift to state 39
-- On NOT shift to state 40
-- On LP shift to state 41
-- On INT shift to state 42
-- On IDE shift to state 4
-- On FALSE shift to state 43
-- On separated_nonempty_list(COMMA,exp) shift to state 46
-- On loption(separated_nonempty_list(COMMA,exp)) shift to state 47
-- On ide shift to state 44
-- On exp shift to state 49
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,exp)) ->

State 46:
## Known stack suffix:
## separated_nonempty_list(COMMA,exp)
## LR(1) items:
loption(separated_nonempty_list(COMMA,exp)) -> separated_nonempty_list(COMMA,exp) . [ RP ]
## Transitions:
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,exp)) -> separated_nonempty_list(COMMA,exp)

State 47:
## Known stack suffix:
## ide LP loption(separated_nonempty_list(COMMA,exp))
## LR(1) items:
exp -> ide LP loption(separated_nonempty_list(COMMA,exp)) . RP [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
-- On RP shift to state 48
## Reductions:

State 48:
## Known stack suffix:
## ide LP loption(separated_nonempty_list(COMMA,exp)) RP
## LR(1) items:
exp -> ide LP loption(separated_nonempty_list(COMMA,exp)) RP . [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
## Reductions:
-- On TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND
--   reduce production exp -> ide LP loption(separated_nonempty_list(COMMA,exp)) RP

State 49:
## Known stack suffix:
## exp
## LR(1) items:
exp -> exp . PLUS exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . MINUS exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . TIMES exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . DIVISION exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . EQUAL exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . LESSEQUAL exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . LESS exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . GREATEREQUAL exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . GREATER exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . AND exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
exp -> exp . OR exp [ TIMES RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DIVISION COMMA AND ]
separated_nonempty_list(COMMA,exp) -> exp . [ RP ]
separated_nonempty_list(COMMA,exp) -> exp . COMMA separated_nonempty_list(COMMA,exp) [ RP ]
## Transitions:
-- On TIMES shift to state 50
-- On PLUS shift to state 52
-- On OR shift to state 56
-- On MINUS shift to state 58
-- On LESSEQUAL shift to state 60
-- On LESS shift to state 62
-- On GREATEREQUAL shift to state 64
-- On GREATER shift to state 66
-- On EQUAL shift to state 68
-- On DIVISION shift to state 54
-- On COMMA shift to state 72
-- On AND shift to state 70
## Reductions:
-- On RP
--   reduce production separated_nonempty_list(COMMA,exp) -> exp

State 50:
## Known stack suffix:
## exp TIMES
## LR(1) items:
exp -> exp TIMES . exp [ TO TIMES SEMICOLON RS RP PLUS OR MINUS LESSEQUAL LESS GREATEREQUAL GREATER EQUAL DO DIVISION COMMA AND ]
## Transitions:
-- On TRUE shift to state 38
-- On PSTRING shift to state 39
-- On NOT shift to state 40
-- On LP shift to state 41
-- On INT shift to state 42
-- On IDE shift to state 4
-- On FALSE shift to state 43
-- On ide shift to state 44
-- On exp shift to state 51
## Reductions:
